<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:fillViewport="true"
    android:id="@+id/ScrollViewLayout1">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rootLayout"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="#8b1b15"
        tools:context="com.ibm.watson.WatsonHealthyEatCanada.ActivityTwo$PlaceholderFragment"
        >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temp_logo"
            android:layout_alignParentTop="true"
            android:src="@drawable/temp_logo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_rounded_corners"
            android:layout_below="@+id/watson_instructions_text"
            android:id="@+id/watson_question_text_border"
            android:layout_marginTop="10dp"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_rounded_corners">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/watson_question_text"
                    android:textColor="#ff000000"
                    android:background="#00000000"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>
        </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/watson_answer_title"
                android:textColor="#ffffffff"
                android:layout_below="@+id/watson_submit_button"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_vertical" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watson_button_text"
                android:id="@+id/watson_submit_button"
                android:textColor="#EAFF00"
                android:background="#db290c"
                android:layout_below="@+id/watson_question_text_border"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp_logo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/watson_instructions"
            android:layout_marginTop="10dp"
            android:id="@+id/watson_instructions_text"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/watson_answer_text"
            android:layout_below="@+id/watson_answer_title"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#ffffffff"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/watson_bottom_logo"
            android:layout_below="@+id/watson_answer_text"
            android:src="@drawable/carrots1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/watson_bottom_logo_description" />


    </RelativeLayout>

</ScrollView>