<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibm.watson.WatsonHealthyEatCanada.create_recipe"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical"
    android:background="#8b1b15">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_rounded_corners"
        android:id="@+id/create_recipe_name_border"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_rounded_corners">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_recipe_name_text_input"
                android:textColor="#ff000000"
                android:background="#00000000"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="Write your recipe title here!"
                android:inputType="text"
                />
        </RelativeLayout>
    </RelativeLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/create_recipe_foods_input_table">

        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Food Name:"
                android:layout_weight="5"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/create_recipe_food_quantity_text"
                android:textColor="#ffffffff" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                android:text="Quantity (grams):"
                android:layout_marginTop="10dp"
                android:id="@+id/create_recipe_food_name_title"
                android:textColor="#ffffffff" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <RelativeLayout
                android:layout_column="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/green_rounded_corners">
                <EditText
                    android:layout_width="fill_parent"
                    android:id="@+id/create_recipe_food_name_input"
                    android:inputType="text"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_rounded_corners"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp">
                 <EditText
                    android:layout_gravity="end"
                    android:layout_width="fill_parent"
                    android:id="@+id/create_recipe_food_quantity_input"
                    android:inputType="number"
                     android:layout_height="wrap_content" />
            </RelativeLayout>

        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_recipe_foods_scroll_view"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_recipe_foods_table"
            android:layout_marginTop="10dp"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_column="1"
                    android:id="@+id/create_recipe_food_name1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginStart="10dp"
                    android:layout_weight="2"
                    android:textColor="#C4FEFF"
                    android:text="Item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="end"
                    android:id="@+id/create_recipe_food_quantity1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#C4FEFF"
                    android:text="Quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>
        </TableLayout>
    </ScrollView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_recipe_instructions_title"
        android:id="@+id/create_recipe_instructions_static_text"
        android:textColor="#ffffffff" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/create_recipe_instructions_scrollView"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_recipe_instructions_text_input"
            android:textColor="#C4FEFF"
            android:background="#00000000"
            android:text="Write your recipe instructions here!"/>
    </ScrollView>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_recipe_button_table"
        android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_height="40dp"
                android:text="@string/update_recipe_button_text"
                android:id="@+id/update_recipe_button"
                android:textColor="#EAFF00"
                android:background="#db290c"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_height="40dp"
                android:text="@string/save_recipe_button_text"
                android:id="@+id/Save_recipe_button"
                android:textColor="#EAFF00"
                android:background="#db290c"
                android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>



